# indicator-multiload

./: .bzrignore  AUTHORS  HACKING  Makefile.am  Makefile.in  README  TODO  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac
.bzr-builddeb/: default.conf
data/: Makefile.am  Makefile.in  de.mh21.indicator-multiload.gschema.xml.in.in  de.mh21.indicator.multiload.gschema.xml.in.in  indicator-multiload.desktop.in  preferences.ui.in
debian/: changelog  control  copyright  docs  rules  watch
debian/patches/: gtk2.diff  gtk3.diff  series
po/: LINGUAS  POTFILES.in  POTFILES.skip  af.po  am.po  ar.po  as.po  ast.po  az.po  be.po  be@latin.po  bg.po  bn.po  bn_IN.po  br.po  bs.po  ca.po  ca@valencia.po  crh.po  cs.po  cy.po  da.po  de.po  dz.po  el.po  en@shaw.po  en_CA.po  en_GB.po  eo.po  es.po  es_AR.po  es_CL.po  es_CO.po  es_CR.po  es_DO.po  es_EC.po  es_ES.po  es_GT.po  es_HN.po  es_MX.po  (+74 more)
src/: Makefile.am  Makefile.in  advpreferences.vala  appindicator-fixed.vapi  appindicatorview.vala  colormapper.vala  config.vapi  cpudata.vala  cpufreqprovider.vala  cpuicondata.vala  cpuprovider.vala  data.vala  diskdata.vala  diskicondata.vala  diskprovider.vala  expressionparser.vala  function.vala  graphdata.vala  graphmodel.vala  graphmodels.vala  gsettings-fixed.vapi  gtop.vapi  icondata.vala  icontracedata.vala  indicator.vala  indicatorview.vala  itemhelp.vala  itempreferences.vala  loaddata.vala  loadicondata.vala  loadprovider.vala  main.vala  memdata.vala  memicondata.vala  memprovider.vala  menudata.vala  menumodel.vala  menupreferences.vala  multiloadindicator.vala  netdata.vala  (+16 more)
